# bookmark

./: README.md
bookmark/: app.json  package-lock.json  package.json
bookmark/app/: _layout.tsx
bookmark/app/(tabs)/: _layout.tsx  conversation.tsx  index.tsx  notes.tsx
bookmark/components/: .VoiceButton.tsx.swp  LoadingScreen.tsx  VoiceButton.tsx
bookmark/contexts/: BookContext.tsx
bookmark/cpp/native-modules/faiss/: CMakeLists.txt
bookmark/cpp/native-modules/faiss/android/: CMakeLists.txt
bookmark/cpp/native-modules/faiss/android/jni/: faiss-native-jni.cpp
bookmark/cpp/native-modules/faiss/android/src/main/java/com/bookmark/: FaissModule.java  FaissPackage.java
bookmark/cpp/native-modules/faiss/ios/: FaissModule.h  FaissModule.mm  FaissNative.podspec
bookmark/cpp/native-modules/faiss/src/: faiss-native.cpp  faiss-native.h
bookmark/cpp/native-modules/ios/: NativeModules-Prefix.pch
bookmark/cpp/native-modules/ios/NativeModules.xcworkspace/: contents.xcworkspacedata
bookmark/cpp/native-modules/mlc-llm/: CMakeLists.txt
bookmark/cpp/native-modules/mlc-llm/android/: CMakeLists.txt
bookmark/cpp/native-modules/mlc-llm/android/jni/: mlc-llm-native-jni.cpp
bookmark/cpp/native-modules/mlc-llm/android/src/main/java/com/bookmark/: MLCLLMModule.java  MLCLLMPackage.java
bookmark/cpp/native-modules/mlc-llm/ios/: MLCLLMModule.h  MLCLLMModule.mm  MLCLLMNative.podspec
bookmark/cpp/native-modules/mlc-llm/src/: mlc-llm-native.cpp  mlc-llm-native.h
bookmark/cpp/native-modules/tts/android/jni/: tts-native-jni.cpp
bookmark/cpp/native-modules/tts/android/src/main/java/com/bookmark/: TTSModule.java  TTSPackage.java
bookmark/cpp/native-modules/tts/ios/: TTSModule.h  TTSModule.mm
bookmark/cpp/native-modules/tts/src/: tts-native.cpp  tts-native.h
bookmark/cpp/native-modules/whisper/: CMakeLists.txt
bookmark/cpp/native-modules/whisper/android/: CMakeLists.txt
bookmark/cpp/native-modules/whisper/android/jni/: whisper-native-jni.cpp
bookmark/cpp/native-modules/whisper/android/src/main/java/com/bookmark/: WhisperModule.java  WhisperPackage.java
bookmark/cpp/native-modules/whisper/ios/: WhisperModule.h  WhisperModule.mm  WhisperNative.podspec
bookmark/cpp/native-modules/whisper/src/: whisper-native.cpp  whisper-native.h
bookmark/hooks/book/: useModel.ts
bookmark/hooks/voice/: useVoiceInteraction.ts
bookmark/native/faiss/: index.ts
bookmark/native/mlc-llm/: index.ts
bookmark/native/tts/: index.ts
bookmark/native/whisper/: index.ts
bookmark/screens/book/: BookScreen.tsx
bookmark/screens/conversation/: ConversationScreen.tsx
bookmark/services/: .VoiceService.ts.swp  BookProcessor.ts  ConversationService.ts  DatabaseService.ts  ModelDownloader.ts  ModelService.ts  NoteService.ts  RAGService.ts  VoiceService.ts
bookmark/types/: book.ts  conversation.ts
prompt/: init.md
